# P2P-Chat

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: main.cpp  p2p.cpp
src/peer/: chat.cpp  chat.h  group.cpp  group.h  groupInitializer.cpp  groupInitializer.h  http.cpp  http.h  main.cpp  message.cpp  message.h  p2p.cpp  p2p.h
src/server/: group.cpp  group.h  peer.cpp  peer.h  server.cpp
